lte/gateway/python/magma/pipelined/tests/scripts/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    transparent: true
    filter_chains:
    - filter_chain_match:
        source_prefix_ranges:
        - address_prefix: 2.2.2.2
          prefix_len: 32
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          use_remote_address: true
          common_http_protocol_options:
            idle_timeout: 3600s # 1 hour
            headers_with_underscores_action: REJECT_REQUEST
          http2_protocol_options:
            max_concurrent_streams: 100
            initial_stream_window_size: 65536 # 64 KiB
            initial_connection_window_size: 1048576 # 1 MiB
          stream_idle_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
          request_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
          route_config:
            name: local_service
            virtual_hosts:
            - name: backend1
              domains:
              - ["3.3.3.3"]
              request_headers_to_add:
                - header:
                    key: "IMSI"
                    value: "02"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster1
            - name: backend2
              domains:
              - ["*"]
              request_headers_to_add:
                - header:
                    key: "NO_HEADER"
                    value: "null"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster1

          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
          codec_type: auto
    - filter_chain_match:
        source_prefix_ranges:
        - address_prefix: 2.2.2.222
          prefix_len: 32
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          use_remote_address: true
          common_http_protocol_options:
            idle_timeout: 3600s # 1 hour
            headers_with_underscores_action: REJECT_REQUEST
          http2_protocol_options:
            max_concurrent_streams: 100
            initial_stream_window_size: 65536 # 64 KiB
            initial_connection_window_size: 1048576 # 1 MiB
          stream_idle_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
          request_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
          route_config:
            name: local_service
            virtual_hosts:
            - name: backend1
              domains:
              - ["3.3.3.3"]
              request_headers_to_add:
                - header:
                    key: "IMSI"
                    value: "222"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster1
            - name: backend2
              domains:
              - ["*"]
              request_headers_to_add:
                - header:
                    key: "NO_HEADER"
                    value: "null"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster1

          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
          codec_type: auto

    listener_filters:
    - name: envoy.filters.listener.original_dst
      typed_config: {}
    - name: envoy.filters.listener.original_src
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.original_src.v3.OriginalSrc

  clusters:
  - name: cluster1
    type: ORIGINAL_DST
    connect_timeout: 6s
    lb_policy: CLUSTER_PROVIDED

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 10.2.0.1
      port_value: 9901
